--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ before_install:
    - docker build -t samba73/docker-react -f Dockerfile.dev .
 
 script:
-   - docker run samba73/docker-react npm run test -- -- coverage   
+   - docker run -e CI=true USERNAME/docker-react npm run test 
