--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,15 @@ before_install:
 
 script:
    - docker run -e CI=true samba73/docker-react npm run test 
+
+deploy:
+   provider: elasticbeanstalk
+   region: "ap-southeast-1"
+   app: "docker-react"
+   env: "Dockerreact-env"
+   bucket_name: "elasticbeanstalk-ap-southeast-1-130571200333"
+   bucket_path: "docker-react"
+   on:
+     branch: master
+   access_key_id: $AWS_ACCESS_KEY
+   secret_access_key: $AWS_SECRET_KEY     
