--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,10 @@ services:
    - docker
 
 before_install: 
-   - docker build -t samba73/docker-react -f Dockerfile.dev .
+   - docker build -t samba73/docker-react .
 
 script:
-   - docker run -e CI=true samba73/docker-react npm run test 
+   - docker run -e CI=true samba73/docker-react
 
 deploy:
    provider: elasticbeanstalk
