--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,10 @@ services:
 # changed to dockerfile
 before_install: 
    - docker build -t samba73/docker-react .
+   - docker run samba73/docker-react
 
-script:
-<<<<<<< HEAD
-   - docker run -e CI=true samba73/docker-react
-=======
-   - docker run samba73/docker-react 
->>>>>>> 9d2dc22b4a1936ec81bf4504748181b5a705d0c7
+#script:
+#   - docker run samba73/docker-react 
 
 deploy:
    provider: elasticbeanstalk
